--- a/main.html
+++ b/main.html
@@ -9,11 +9,13 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<main>
+		<div>
 		<img src="https://imgs.search.brave.com/nJW6hW5H8FvhwT5-0QHg9ZX55y9NxLhpFcrMuLU_qPc/rs:fit:500:0:1:0/g:ce/aHR0cHM6Ly9tZWRp/YS5pc3RvY2twaG90/by5jb20vaWQvOTY3/MDg5OTMvdmVjdG9y/L3ZhbGVudGluZS10/cmVlLW9mLWhlYXJ0/LXNoYXBlLWxvdmUu/anBnP3M9NjEyeDYx/MiZ3PTAmaz0yMCZj/PVBobnlOclNBR1ly/Z0ZMX1NwemFNZWtO/bk43NHY5WE5veHVN/eUlmT2lQaDg9">
 		<h1>Pricing Card</h1>
 		<p>Price:Rs.200</p>
 		<p>lorem ipsum</p>
 		<button>Buy Now</button>
+	    </div>
 	</main>
     <script type="text/javascript" src="./script.js">
 </script>
